Solved an issue with assignin traits

--- a/SimTECH/SimTECH/Components/SignalIcon.razor
+++ b/SimTECH/SimTECH/Components/SignalIcon.razor
@@ -14,6 +14,7 @@
     [Parameter]
     public Size Size { get; set; } = Size.Small;
 
+    // We might want to make the following common somewhere
     private string _signalIcon
     {
         get
