--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -116,10 +116,10 @@
                     <MudText Typo="Typo.caption">@context.Power</MudText>
                 </MudTd>
                 <MudTd>
-                    <MudStack Row="true" Spacing="2" Justify="Justify.Center" AlignItems="AlignItems.Center" Class="pa-0 mud-width-full">
+                    <MudStack Row="true" Spacing="1" Justify="Justify.Center" AlignItems="AlignItems.Center" Class="pa-0 mud-width-full">
                         <MudIcon Icon="@IconCollection.Sword" Size="Size.Small" />
                         <MudText Typo="Typo.caption">@context.Attack</MudText>
-                        <MudDivider Vertical="true" />
+                        <span class="px-1 mud-height-full" style="background-color:antiquewhite"></span>
                         <MudText Typo="Typo.caption">@context.Defense</MudText>
                         <MudIcon Icon="@IconCollection.ShieldChevron" Size="Size.Small" />
                     </MudStack>
@@ -138,7 +138,9 @@
                     }
                     else
                     {
-                        <MudText Typo="Typo.button" Color="Color.Error">@context.Incident.Name</MudText>
+                        <MudBadge Icon="@IconCollection.CarCrash" Color="Color.Error" Overlap="true" Bordered="true" Class="ma-1">
+                            <MudText Typo="Typo.button" Color="Color.Error">@context.Incident.Name</MudText>
+                        </MudBadge>
                     }
                 </MudTd>
                 <MudTd>
