--- a/SimTECH/SimTECH/Pages/Racing/PostRace.razor
+++ b/SimTECH/SimTECH/Pages/Racing/PostRace.razor
@@ -113,8 +113,5 @@
         loading = false;
     }
 
-    void GoToStandings()
-    {
-        _nav.NavigateTo($"/overview/{race.SeasonId}/2");
-    }
+    void GoToStandings() => _nav.NavigateTo($"/overview/{race.SeasonId}/2");
 }
