--- a/SimTECH/SimTECH/Pages/Factors/TyreEditor.razor
+++ b/SimTECH/SimTECH/Pages/Factors/TyreEditor.razor
@@ -10,8 +10,8 @@
             <MudNumericField T="int" @bind-Value="@Model.Pace" Label="Pace" Class="field-md" />
 
             <MudStack Row="true" Justify="Justify.FlexStart" Spacing="4">
-                <MudNumericField T="int" @bind-Value="Model.WearMax" Min="0" Max="@(Model.WearMin)" Label="WearMax" Class="field-sm" />
-                <MudNumericField T="int" @bind-Value="Model.WearMin" Min="@(Model.WearMax)" Label="WearMin" Class="field-sm" />
+                <MudNumericField T="int" @bind-Value="Model.WearMin" Min="0" Max="@(Model.WearMax)" Label="WearMin" Class="field-sm" />
+                <MudNumericField T="int" @bind-Value="Model.WearMax" Min="@(Model.WearMin)" Label="WearMax" Class="field-sm" />
             </MudStack>
         </MudForm>
         <MudPaper Height="75px">
