--- a/SimTECH/SimTECH/Pages/Setup/Teams.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Teams.razor
@@ -21,10 +21,11 @@
                 </CellTemplate>
             </TemplateColumn>
             <PropertyColumn Property="e => e.State" />
-            <TemplateColumn T="Team" Sortable="false" CellClass="d-flex justify-end">
+            <TemplateColumn T="Team" Sortable="false">
                 <CellTemplate>
                     <MudButtonGroup>
                         <MudIconButton Size="Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateTeam(context.Item))" />
+                        <MudIconButton Icon="@Icons.Material.Outlined.Delete" Color="Color.Error" OnClick="@(async () => await DeleteTeam(context.Item))" />
                     </MudButtonGroup>
                 </CellTemplate>
             </TemplateColumn>
@@ -37,8 +38,9 @@
                     </CardHeaderContent>
                 </MudCardHeader>
                 <MudCardContent>
-                    <MudText>Woah, check this flag out!</MudText>
-                    <CountryFlag Code="@context.Item.Country" Size="FlagSize.Small" />
+                    <MudText>
+                        Not exactly sure yet what we're going to put here
+                    </MudText>
                 </MudCardContent>
             </MudCard>
         </ChildRowContent>
@@ -73,5 +75,11 @@
             await TeamService.UpdateTeam(updatedItem);
             TeamData = await TeamService.GetTeams();
         }
+    }
+
+    async Task DeleteTeam(Team item)
+    {
+        await TeamService.DeleteTeam(item);
+        TeamData.Remove(item);
     }
 }
