--- a/SimTECH/SimTECH/Pages/Setup/Tracks.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Tracks.razor
@@ -5,8 +5,8 @@
 
 <PageTitle>Tracks</PageTitle>
 
-<MudContainer MaxWidth="MaxWidth.ExtraLarge">
-    <MudDataGrid T="Track" Items="TrackData" Bordered="true" Class="my-2">
+<MudContainer>
+    <MudDataGrid T="Track" Items="@TrackData" Bordered="true" Class="my-2">
         <ToolBarContent>
             <MudText Typo="Typo.h4">Tracks</MudText>
             <MudSpacer />
@@ -20,33 +20,12 @@
                     <CountryNamedFlag Code="@context.Item.Country" Size="FlagSize.Small" />
                 </CellTemplate>
             </TemplateColumn>
-            <PropertyColumn Property="e => e.Length" Title="Length (Km)" />
-            <TemplateColumn T="Track" Title="Aero">
+            <TemplateColumn T="Track" Title="Length" SortBy="e => e.Length">
                 <CellTemplate>
-                    <MudText Typo="Typo.caption">@(context.Item.AeroMod)x</MudText>
+                    <MudText Typo="Typo.caption">@(context.Item.Length)Km</MudText>
                 </CellTemplate>
             </TemplateColumn>
-            <TemplateColumn T="Track" Title="Chassis">
-                <CellTemplate>
-                    <MudText Typo="Typo.caption">@(context.Item.ChassisMod)x</MudText>
-                </CellTemplate>
-            </TemplateColumn>
-            <TemplateColumn T="Track" Title="Powertrain">
-                <CellTemplate>
-                    <MudText Typo="Typo.caption">@(context.Item.PowerMod)x</MudText>
-                </CellTemplate>
-            </TemplateColumn>
-            <TemplateColumn T="Track" Title="Qualifying">
-                <CellTemplate>
-                    <MudText Typo="Typo.caption">@(context.Item.QualifyingMod)x</MudText>
-                </CellTemplate>
-            </TemplateColumn>
-            <TemplateColumn T="Track" Title="Defense">
-                <CellTemplate>
-                    <MudText Typo="Typo.caption">@(context.Item.DefenseMod)x</MudText>
-                </CellTemplate>
-            </TemplateColumn>
-            <TemplateColumn T="Track">
+            <TemplateColumn T="Track" Sortable="false">
                 <CellTemplate>
                     <MudButtonGroup>
                         <MudIconButton Size="@Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateTrack(context.Item))" />
@@ -57,7 +36,49 @@
         </Columns>
         <ChildRowContent>
             <MudPaper>
-                <MudText>@context.Item.Name</MudText>
+                <MudText Typo="Typo.h6">@context.Item.Name</MudText>
+                <MudStack Row="true" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center">
+                    <MudCard>
+                        <MudCardContent>
+                            <MudStack Row="true">
+                                <MudText>Aero modifier:</MudText>
+                                <MudText Typo="Typo.caption">@(context.Item.AeroMod)x</MudText>
+                            </MudStack>
+                        </MudCardContent>
+                    </MudCard>
+                    <MudCard>
+                        <MudCardContent>
+                            <MudStack Row="true">
+                                <MudText>Chassis modifier:</MudText>
+                                <MudText Typo="Typo.caption">@(context.Item.ChassisMod)x</MudText>
+                            </MudStack>
+                        </MudCardContent>
+                    </MudCard>
+                    <MudCard>
+                        <MudCardContent>
+                            <MudStack Row="true">
+                                <MudText>Powertrain modifier:</MudText>
+                                <MudText Typo="Typo.caption">@(context.Item.PowerMod)x</MudText>
+                            </MudStack>
+                        </MudCardContent>
+                    </MudCard>
+                    <MudCard>
+                        <MudCardContent>
+                            <MudStack Row="true">
+                                <MudText>Qualifying modifier:</MudText>
+                                <MudText Typo="Typo.caption">@(context.Item.QualifyingMod)x</MudText>
+                            </MudStack>
+                        </MudCardContent>
+                    </MudCard>
+                    <MudCard>
+                        <MudCardContent>
+                            <MudStack Row="true">
+                                <MudText>Defense modifier:</MudText>
+                                <MudText Typo="Typo.caption">@(context.Item.DefenseMod)x</MudText>
+                            </MudStack>
+                        </MudCardContent>
+                    </MudCard>
+                </MudStack>
             </MudPaper>
         </ChildRowContent>
         <PagerContent>
