--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -161,7 +161,7 @@
                         <MudTd>R: @(context.Round)</MudTd>
                         <MudTd>@(context.Name)</MudTd>
                         <MudTd>
-                            <MudButton Variant="Variant.Outlined" Color="Color.Secondary" OnClick="@(() => GoToRaceWeek(context.Id))">Go To</MudButton>
+                            <MudButton Variant="Variant.Text" Color="Color.Secondary" OnClick="@(() => GoToRaceWeek(context.Id))">Go To</MudButton>
                         </MudTd>
                     </RowTemplate>
                 </MudTable>
@@ -183,7 +183,7 @@
     </MudGrid>
 </MudContainer>
 
-@code {
+    @code {
     List<FinishedRaceModel> recentRaces;
     List<Race> upcomingRaces = new();
     int raceAmount = 5;
@@ -202,13 +202,18 @@
 
         recentRaces = await _raceService.GetRecentlyFinishedCalendarRaces(raceAmount);
         recentRaces.Reverse();
+
+        await RetrieveUpcomingRaces();
     }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        var storedExample = await _localStorage.GetAsync<string>("example");
-        if (storedExample.Success)
-            exampleStore = storedExample.Value;
+        if (firstRender)
+        {
+            var storedExample = await _localStorage.GetAsync<string>("example");
+            if (storedExample.Success)
+                exampleStore = storedExample.Value;
+        }
     }
 
     private async Task RetrieveUpcomingRaces()
@@ -217,6 +222,8 @@
         foreach (var season in seasons)
         {
             var upcomingRace = await _raceService.GetNextRaceOfSeason(season.Id);
+            if (upcomingRace != null)
+                upcomingRaces.Add(upcomingRace);
         }
     }
 
