Default sizes for at least two charts

--- a/SimTECH/SimTECH/Pages/Racing/GapChartDialog.razor
+++ b/SimTECH/SimTECH/Pages/Racing/GapChartDialog.razor
@@ -6,10 +6,10 @@
         </MudText>
     </TitleContent>
     <DialogContent>
-        <MudContainer Fixed="true" Class="pa-4">
+        <MudContainer Class="pa-4" Style="min-width: 800px; min-height: 700px">
             @if (!loading)
             {
-                <ApexCharts.ApexChart TItem="DataPoint" Title="Gapper chart" Options="@options">
+                <ApexCharts.ApexChart TItem="DataPoint" Title="Gaps to leader" Options="@options" Height="550">
                     @foreach (var driver in DataSets)
                     {
                         <ApexCharts.ApexPointSeries TItem="DataPoint"
