Yoinked irrelevant countries from list

--- a/SimTECH/SimTECH/Pages/Factors/Incidents.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Incidents.razor
@@ -32,7 +32,7 @@
 </MudContainer>
 
 @code {
-    List<Incident> IncidentData = new();
+    List<Incident> IncidentData;
 
     protected override async Task OnInitializedAsync()
     {
